# improving-pdf

./: .gitignore  LICENSE  PLAN.md  README.md  SKILL.md  _encode_images.py  pdf-creation.html  pyproject.toml  skill.md
.windsurf/workflows/: release.md
assets/: base64-images.txt
src/improving_pdf_tool/: __init__.py  cli.py  generator.py  template.html
src/improving_pdf_tool/assets/: images.py
test/: large-diagrams-test.md  sample-input.md  test-input.html
